Build MR JAR and prepare compilation with Gradle toolchains